kubernetes/apps/debug/echo-server/app/ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: echo
  namespace: networking
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`echo.${SECRET_DOMAIN}`)
      middlewares:
        - name: default
        # - name: basicauth
      services:
        - name: echo-server
          namespace: debug
          port: 80
  # Use the secret generated by cert-manager
  tls:
    secretName: "${SECRET_DOMAIN/./-}-tls"
    # secretName: '${SECRET_DOMAIN/./-}-stage-tls'
